force-app/main/default/objects/QRGeneratorToolSettings__c/QRGeneratorToolSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to configure hierarchical settings in the QR Generator Tool to provide user-specific &amp; profile-specific customizations</description>
    <label>QR Generator Tool Settings</label>
</CustomObject>