force-app/main/default/objects/QRGeneratorToolSettings__c/fields/API_endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>