force-app/main/default/objects/QRGeneratorToolSettings__c/fields/API_key__c.field-meta.xml
<CustomField>
    <fullName>API_key__c</fullName>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>