force-app/main/default/objects/QRGeneratorToolSettings__c/fields/API_normalizeInput__c.field-meta.xml
<CustomField>
    <fullName>API_normalizeInput__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the input gets normalized. This means strings are trimmed, special quotations replaced with ASCII ones, and special characters replaced with semantically equal ones (e.g. œ -&gt; oe)</description>
    <inlineHelpText>If true, the input gets normalized. This means strings are trimmed, special quotations replaced with ASCII ones, and special characters replaced with semantically equal ones (e.g. œ -&gt; oe)
Documentation: https://rest.qr-invoice.cloud/swagger-ui/index.html#/11%20Payment%20Part%20%26%20Receipt%20(QR%20Bill)/createPaymentPartReceipt</inlineHelpText>
    <label>Normalize Input</label>
    <type>Checkbox</type>
</CustomField>