force-app/main/default/objects/QRGeneratorToolSettings__c/fields/API_resolution__c.field-meta.xml
<CustomField>
    <fullName>API_resolution__c</fullName>
    <description>Output Resolution - https://rest.qr-invoice.cloud/swagger-ui/index.html#/11%20Payment%20Part%20%26%20Receipt%20(QR%20Bill)/createPaymentPartReceipt</description>
    <inlineHelpText>Output Resolution</inlineHelpText>
    <label>resolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>